--- a/package.json
+++ b/package.json
@@ -49,5 +49,11 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "lodash.memoize": "^4.1.2",
+    "lodash.omit": "^4.5.0",
+    "md5": "^2.3.0",
+    "prop-types": "^15.7.2"
+  }
 }
